Added openAI completion API

--- a/public/article-analyzer.html
+++ b/public/article-analyzer.html
@@ -52,8 +52,8 @@
     
     <div class="mt-4 grid grid-cols-3 gap-4"> <!-- <div class="mt-4 grid grid-cols-2 gap-4"> -->   
         <div class="col-span-2"> <!--  <div> -->
-            <textarea id="textArea2" class="w-full p-2 border border-gray-300 rounded" rows="7">
-            </textarea>
+            <!-- <textarea id="textArea2" class="w-full p-2 border border-gray-300 rounded" rows="7"></textarea> -->
+            <pre id="jsonOutput" class="p-4 bg-white text-gray-800 border border-gray-300 rounded-md overflow-x-auto"></pre>
         </div>
         <!-- <div>
             <textarea id="textArea3" class="w-full p-2 border border-gray-300 rounded" rows="6"></textarea>
