--- a/public/article-analyzer.html
+++ b/public/article-analyzer.html
@@ -37,7 +37,7 @@
     </div> -->
     <div class="mt-4 grid grid-cols-3 gap-4">
         <div class="col-span-2">
-            <textarea id="textArea" class="w-full p-2 border border-gray-300 rounded" rows="7"> In the text below, enclosed within <<< and >>> symbols, identify a short list of the same main events, individuals, and phenomena. Write a definition for each of them in such a way that it includes the key features that can be used to compare them to other events, individuals, or phenomena. Also calculate a relevance score for each identified event, individuals and phenomena. Write output in JSON format with "name", "definition" and "relevance_score" fields for all identified "events", "individuals", and "phenomena".
+            <textarea id="textArea" class="w-full p-2 border border-gray-300 rounded" rows="7"> In the text below, enclosed within <<< and >>> symbols, identify a short list of the same main events, individuals, and phenomena. Write a definition for each of them in such a way that it includes the key features that can be used to compare them to other events, individuals, or phenomena. Also calculate a relevance score for each identified event, individuals and phenomena. Write output in JSON format with "name", "definition" and "relevance_score" fields for all identified "events", "individuals", and "phenomena". Add short summary of the article to the "summary" field of JSON.
 <<<
 {article} 
 >>>
