Show different versions of metadata on UI

--- a/public/article-analyzer.html
+++ b/public/article-analyzer.html
@@ -56,9 +56,10 @@
             <!-- <textarea id="textArea2" class="w-full p-2 border border-gray-300 rounded" rows="7"></textarea> -->
             <pre id="jsonOutput" class="p-4 bg-white text-gray-800 border border-gray-300 rounded-md overflow-x-auto"></pre>
         </div>
-        <!-- <div>
-            <textarea id="textArea3" class="w-full p-2 border border-gray-300 rounded" rows="6"></textarea>
-        </div> -->
+        <div>
+            <select id="dropdown3" class="w-full p-2 border border-gray-300 rounded" onchange="dropDownOnChange(this)" ></select>        
+            <!-- <textarea id="textArea3" class="w-full p-2 border border-gray-300 rounded" rows="6"></textarea> -->
+        </div> 
     </div>
 
     <script src="https://unpkg.com/@popperjs/core@2"></script>
