--- a/public/article-analyzer.html
+++ b/public/article-analyzer.html
@@ -51,6 +51,7 @@
             <select id="dropdown5" class="w-full p-2 border border-gray-300 rounded"></select> -->
             <input id="txtMaxTokens" type="text" class="w-full p-2 border border-gray-300 rounded" value="2000" placeholder="Response tokens size: 2000"/><br/><br/> 
             <button id="btnAnalyze" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" disabled>Analyze</button>
+            <button id="btnNamedEntities" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded hidden">Named Entities</button>
         </div>
     </div>
 
