--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,9 @@
     <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col">
         <div class="mb-4">
             <h2 class="text-2xl mb-3">Main Menu</h2>
-            <a href="news-reader.html" class="block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mb-3">Go to News Reader</a>
-            <a href="article-analyzer.html" class="block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Go to Article Analyser</a>
+            <a href="news-reader.html" class="block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mb-3">News Reader</a>
+            <a href="article-analyzer.html" class="block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mb-3">Article Analyser</a>
+            <a href="namedentities.html" class="block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mb-3">Entities Table</a>
         </div>
     </div>
 </body>
