--- a/public/article-analyzer.html
+++ b/public/article-analyzer.html
@@ -50,6 +50,7 @@
             <!-- <select id="dropdown4" class="w-full mb-2 p-2 border border-gray-300 rounded"></select>
             <select id="dropdown5" class="w-full p-2 border border-gray-300 rounded"></select> -->
             <input id="txtMaxTokens" type="text" class="w-full p-2 border border-gray-300 rounded" value="2000" placeholder="Response tokens size: 2000"/><br/><br/> 
+            <input id="txtTemperature" type="text" class="w-full p-2 border border-gray-300 rounded" value="0.5" placeholder="Temperature: 0.5"/><br/><br/> 
             <button id="btnAnalyze" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" disabled>Analyze</button>
             <button id="btnNamedEntities" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded hidden">Named Entities</button>
         </div>
